--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/TelariLove/I_Wozek_Bot/issues"
   },
-  "homepage": "https://github.com/TelariLove/I_Wozek_Bot#readme"
+  "homepage": "https://github.com/TelariLove/I_Wozek_Bot#readme",
+  "dependencies": {
+    "telegraf": "^4.16.3"
+  }
 }
