--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "type": "module",
   "name": "i_wozek_bot",
   "version": "1.0.0",
   "description": "Inventarization rolls bot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,8 @@
   "homepage": "https://github.com/TelariLove/I_Wozek_Bot#readme",
   "dependencies": {
     "telegraf": "^4.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
