--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/TelariLove/I_Wozek_Bot#readme",
   "dependencies": {
+    "lodash": "^4.17.21",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
