--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/TelariLove/I_Wozek_Bot#readme",
   "dependencies": {
     "lodash": "^4.17.21",
+    "mongoose": "^8.2.1",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
